fixed toast alignment after font size increase and lightened skeleton color

--- a/src/skeleton/styles.scss
+++ b/src/skeleton/styles.scss
@@ -1,9 +1,10 @@
 @import "../../variables/colors.scss";
 @import "../../variables/spacing.scss";
+
 .skeleton {
   display: inline-block;
   width: 100%;
   height: 8px;
   border-radius: $borderRadiusSmall;
-  background-color: $grayDarker;
+  background-color: $gray;
 }
